--- a/mirror-fashion/css/estilos.css
+++ b/mirror-fashion/css/estilos.css
@@ -3,6 +3,11 @@ body {
   font-family: "Lucida Sans Unicode", "Lucida Grande", sans-serif;
 }
 
+.container {
+  margin: 0 auto;
+  width: 940px;
+}
+
 .sacola {
   background: url(../img/sacola.png) no-repeat top right;
 
@@ -10,6 +15,7 @@ body {
   padding-right: 35px;
   text-align: right;
   width: 140px;
+  padding-top: 8px;
 }
 
 .menu-opcoes ul {
@@ -17,5 +23,10 @@ body {
 }
 
 .menu-opcoes a {
-   color: #003366;
+  color: #003366;
+}
+
+.menu-opcoes ul li {
+  display: inline;
+  margin-left: 20px;
 }
